--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "cartesian-product": "^2.1.2",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "weighted": "^0.3.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
